--- a/package.json
+++ b/package.json
@@ -57,10 +57,10 @@
     "clsx": "2.1.1",
     "framer-motion": "11.18.2",
     "intl-messageformat": "10.7.16",
-    "next": "15.3.1",
+    "next": "^16.0.7",
     "next-themes": "0.4.6",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "recharts": "^3.4.1",
