--- a/package.json
+++ b/package.json
@@ -59,9 +59,11 @@
     "intl-messageformat": "10.7.16",
     "next": "^16.0.7",
     "next-themes": "0.4.6",
+    "pdfjs-dist": "^5.4.530",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
+    "react-pdf": "^10.3.0",
     "react-toastify": "^11.0.5",
     "recharts": "^3.4.1",
     "sweetalert2": "^11.26.3"
