--- a/package.json
+++ b/package.json
@@ -72,7 +72,10 @@
     "@next/eslint-plugin-next": "15.3.4",
     "@react-types/shared": "3.32.1",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/d3-color": "^3.1.3",
+    "@types/d3-path": "^3.1.1",
     "@types/node": "20.5.7",
+    "@types/prop-types": "^15.7.15",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "8.34.1",
